<resources>
    <string name="app_name">aabbas-MyBookWishlist</string>
    <string name="todo">todo</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="read">Read</string>
    <string name="total_books_0_read_0">Total Books: 0 | Read: 0</string>
    <string name="to">TODO</string>
    <string name="add_book">add</string>
    <string name="read_unread">Read/Unread</string>
</resources>